Buttons - avoiding white spaces

--- a/src/scss/_buttons.scss
+++ b/src/scss/_buttons.scss
@@ -21,7 +21,7 @@
   .buttons {
     overflow: visible;
     flex-wrap: wrap;
-    transform: translateY(-27px);
+    margin-top: -27px;
     padding-left: 32px;
   }
 }
